# pixelsweeper

./: Cargo.toml  flake.nix
.github/workflows/: deploy.yml
html/: index.html
src/: lib.rs
