[package]
name = "analog-minesweeper"
version = "0.1.0"
edition = "2024"

# TODO install wasm-opt and delete this
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element", "EventTarget", "MouseEvent", "HtmlElement", "DomRect", "ImageData"] }
once_cell = "1.17"
console_error_panic_hook = "0.1.7"
