[package]
name = "pixelsweeper"
version = "0.1.0"
edition = "2024"
description = "A minesweeper like game, but the grid are pixels"
repository = "https://github.com/rbran/pixelsweeper"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element", "EventTarget", "MouseEvent", "HtmlElement", "DomRect", "ImageData"] }
once_cell = "1.17"
console_error_panic_hook = "0.1.7"
